--- a/parcel.html
+++ b/parcel.html
@@ -34,6 +34,15 @@
       .slides {
         font-family: 'Inter', sans-serif;
       }
+      .logoWords {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .logoText {
+        font-size: 3rem;
+      }
     </style>
   </head>
   <body
@@ -45,64 +54,19 @@
       style="display: none;"
       id="customSvgLibrary"
     >
-      <symbol id="logo" viewBox="0 0 106 31">
-        <title>Slides Framework</title>
+      <symbol id="logo" viewBox="0 0 1280 904">
+        <title>Parcel</title>
         <path
-          d="M17.413 14.04c-.56-5.84-5.6-7-8.52-7-4.6 0-8.6 2.92-8.6 7.52 0 3 2.4 4.88 5.28 5.8 4.24 1.64 5.88 1.84 5.88 3.36 0 1.08-1.2 1.72-2.32 1.72-.28 0-2.24 0-2.52-2.04h-6.6c.6 5.84 5.68 7.36 9.04 7.36 4.92 0 9.04-2.88 9.04-7.76 0-4.8-4-5.92-7.76-6.96-1.76-.52-3.4-1.2-3.4-2.2 0-.6.48-1.48 1.88-1.48 1.96 0 2.04 1.2 2.08 1.68h6.52zm2.222 15.96h6.64v-29.6h-6.64v29.6zm9.662-24.56h6.64v-5.04h-6.64v5.04zm0 24.56h6.64v-22.2h-6.64v22.2zm32.782-29.6h-6.64v9.28c-.72-.72-2.6-2.64-6.52-2.64-5.64 0-11 4.28-11 11.8 0 6.68 4.4 11.88 11.12 11.88 4.48 0 6.08-2.2 6.72-3.12v2.4h6.32v-29.6zm-17.52 18.4c0-2.56 1.8-5.56 5.64-5.56 1.56 0 2.96.56 3.96 1.56 1 .96 1.64 2.32 1.64 3.92.08 1.64-.52 3.08-1.56 4.12s-2.52 1.68-4.12 1.68c-3.12 0-5.56-2.28-5.56-5.68v-.04zm42.502 2.4c.52-4.08-.32-7.64-3.12-10.64-2.08-2.2-5-3.52-8.4-3.52-6.76 0-11.64 5.72-11.64 11.92 0 6.6 5.4 11.76 11.76 11.76 2.28 0 4.48-.68 6.32-2 1.88-1.28 3.44-3.2 4.52-5.68h-6.8c-.8 1.16-1.92 2.08-4.04 2.08-2.6 0-4.84-1.56-5.12-3.92h16.52zm-16.44-5.04c.16-1.04 1.52-3.52 4.96-3.52s4.8 2.48 4.96 3.52h-9.92zm34.502-2.12c-.56-5.84-5.6-7-8.52-7-4.6 0-8.6 2.92-8.6 7.52 0 3 2.4 4.88 5.28 5.8 4.24 1.64 5.88 1.84 5.88 3.36 0 1.08-1.2 1.72-2.32 1.72-.28 0-2.24 0-2.52-2.04h-6.6c.6 5.84 5.68 7.36 9.04 7.36 4.92 0 9.04-2.88 9.04-7.76 0-4.8-4-5.92-7.76-6.96-1.76-.52-3.4-1.2-3.4-2.2 0-.6.48-1.48 1.88-1.48 1.96 0 2.04 1.2 2.08 1.68h6.52z"
+          d="M619 15.1c-73.4 3.3-143.3 24.5-206.5 62.7-62 37.5-115.1 91.6-151 153.7-7.5 13-19.3 36.6-24 48-2 4.9-4.1 9.9-4.6 11-4.9 11-12 33.3-17.4 54.5-13.7 53.7-16.6 111.6-8.4 168 5.2 35.4 16.3 75.7 28.8 104.5 18.2 41.8 40.1 78.4 65 108.5 13.6 16.3 33.7 37 49.6 51.1 2.8 2.4 5.2 4.6 5.5 4.9.5.5 11.7 9.7 15 12.3.8.7 4.7 3.5 8.5 6.3 42.6 30.8 82.7 50.9 134.5 67.2 3.3 1 23.4 6.1 32.5 8.2 11.9 2.8 34.3 6.3 52 8.2 15.7 1.7 63.3 1.7 79.5 0 65.2-6.9 123.9-25.4 177.5-56 15.6-8.9 44.4-28.6 56-38.3 1.1-.9 4.8-4 8.2-6.8 7.9-6.5 33.1-29.8 34-31.6.5-.7 3.5-4.2 6.8-7.7 16.8-17.5 42.2-51.8 53.4-72.2 1.8-3.2 4.6-8.1 6.3-10.9 5.8-9.9 20.6-40.8 22.9-47.7.4-1.4 2.2-6.1 3.9-10.5 14.2-36.8 22.8-76.3 26.5-121.8 1.9-23.5 1.9-38.2 0-61.2-3.2-40.5-9.4-71.1-21.5-107.6C1015.8 203.4 937.5 113 835 61.5c-20.6-10.4-43.1-19.8-59.9-25.1-2.5-.8-6.2-1.9-8.1-2.6-1.9-.6-4.8-1.4-6.5-1.8-1.6-.5-8.2-2.2-14.5-3.8-26.8-7.2-56.8-11.7-83-12.7-8.5-.3-18-.7-21-.9-3-.2-13.4 0-23 .5zM556.5 262c17.9 5.1 58.9 28.1 80 44.8.6.4 2.6 1.9 4.5 3.2 4.4 3.1 24.4 19.4 33.4 27.4 24.8 21.7 42.8 38.7 71.8 67.4l23.7 23.5 4.8-.6c9.5-1.1 30.8-3.8 31.7-4.1.6-.1-1.7-1.8-5-3.6-8.9-5.1-21-17.9-26.1-27.5-5.6-10.8-11.7-32.5-9.5-33.9.5-.3 3.3 2 6.3 5 10.9 11.2 20.1 16.8 34.5 20.8 18.1 5 33.2 6.6 65.1 6.6 25.1.1 42.2 1.6 56.4 5 46.1 10.9 81.4 37.2 92.8 69.2 2.6 7.4 4.5 18.9 3.8 23.5-1.6 10.5-2.7 15.7-3.6 16.6-.6.6-2-.2-3.8-2.4-5.4-6.7-17.4-17.9-19.1-17.9-.9 0-6.2 1.1-11.7 2.4-10.9 2.7-23.4 5.7-44.5 10.6-7.4 1.8-15.3 3.7-17.5 4.3-2.2.6-4.4 1.2-5 1.3-.5.1-12.7 3-27 6.4-14.3 3.4-31.6 7.5-38.5 9.1-6.9 1.7-16.1 3.9-20.5 4.9-4.4 1.1-16.3 3.9-26.5 6.3-10.2 2.5-24.8 5.9-32.5 7.7-7.7 1.8-18.5 4.4-24 5.7-5.5 1.4-10.9 2.6-12 2.8-1.1.2-8.5 1.9-16.5 3.9-8 1.9-16.5 4-19 4.5-8.4 2-72.9 17.5-79.5 19.1-2.2.6-4.7 1.3-5.5 1.5-.8.2-4.8 1.1-8.9 2-4.1.9-7.7 1.8-8.1 2-.4.2-2.2.7-4.1 1-3.2.6-9.7 2.1-40.4 9.5-6.6 1.6-17.6 4.2-24.5 5.8-26.4 6.3-25.3 6.2-26.4 1.7-.9-3.4-1.6-4.3-10.6-13.5-11.3-11.4-21.8-17.6-67.5-39.5-24.8-11.8-30.3-14.6-39.3-19.7-14.4-8.3-24.7-16.6-30.8-24.9-3.7-5.1-7-13.7-5.7-15 .5-.4 9.6-1.9 20.3-3.4 10.7-1.4 20.9-2.8 22.5-3.1 3.5-.5 47.3-6.2 80-10.4 12.7-1.7 27.7-3.7 33.5-4.5 10.4-1.5 27.7-3.7 42-5.5 4.1-.6 8.9-1.2 10.5-1.5 1.7-.3 13.6-1.9 26.5-3.5 12.9-1.7 24.6-3.3 26-3.5 1.4-.2 13.1-1.8 26-3.5 34.7-4.5 41.9-5.6 42.6-6.2.4-.5-25.8-33.4-45.7-57.3-1-1.1-6.7-8.2-12.7-15.7-6-7.6-14.6-18.1-19-23.5-14.5-17.6-37.6-45.9-40.7-49.9-1.6-2.1-4-4.9-5.2-6.2l-2.1-2.3-5.3 2.7c-16.2 8.2-43 14.5-83.4 19.8-24.4 3.2-44.4 4.6-78 5.2-59.3 1.3-97.4-3.7-116.8-15.1-5.1-2.9-7.2-5.1-8.2-8.4-.6-1.8-.4-2.3.6-1.8 16.2 7 25.5 8.3 49.5 6.7 13.6-.9 31.3-2.9 39.3-4.5 1.4-.2 6.1-.9 10.5-1.5 10.6-1.4 30.4-4.6 44.1-7 6.1-1.1 15.1-2.7 20-3.5 16-2.7 36.8-6.4 45.5-8 4.7-.9 10.8-2 13.5-2.5 2.8-.5 8.6-1.6 13-2.4 8.9-1.6 12.9-2.3 20.7-3.2 2.9-.4 5.5-.8 5.8-1.1 1.3-1.2 23.9.1 29.5 1.7zm6.1 48.7c1 1.6 21.5 27.6 24.4 31 1.2 1.5.7 1.8-5.5 3.1-12.1 2.7-40.8 5.8-69 7.5-26.2 1.6-104.9 1.6-128 0-47.9-3.3-80.9-9.8-95-18.6-4.5-2.8-7.7-8.8-3.7-7.2 7.5 3.1 14 4.9 24.8 6.9 1.2.3 8.4 1 16 1.7 25.4 2.2 72.3-.5 115.4-6.7 5.8-.8 12.5-1.7 15-2 2.5-.2 7-.9 10-1.4 3-.6 16.3-2.8 29.5-5 23.5-3.9 49.5-8.5 56.5-10 5.9-1.3 8.5-1.1 9.6.7zm46.8 62c7.5 9.4 13.6 17.3 13.6 17.6 0 .2-2.4.7-5.2 1.1-2.9.4-9.3 1.3-14.3 2.1-26.4 4.2-90.1 5.1-145 1.9-11.3-.6-52.3-5.2-63-7-4.9-.8-10.6-1.7-12.5-1.9-4.8-.6-26.2-5.2-32.9-7-12.6-3.4-24-8.7-29.6-13.6-3.3-3-4.9-6.7-2.2-5.6 16.3 7.4 31.1 11.4 54.7 14.8 11.1 1.7 18.7 2 43.5 2 31.8-.1 32.3-.1 62.5-3.2 26.7-2.7 50.4-6.4 95.5-15 16.3-3 19.9-3.7 20.6-3.5.4 0 6.8 7.8 14.3 17.3zm-248.5 22.7c8.3 4.2 30.4 11.7 42.6 14.5 26 5.8 34.6 6.6 73.5 6.5 21.4 0 40-.5 45-1.2 13.1-1.7 23.1-3 27.5-3.5 6.5-.8 18.3-2.7 29-4.7 8.5-1.6 16.9-3.1 48.5-8.6 2.5-.5 4.8-.8 5.2-.9.3 0 3.4 3.6 6.9 8 3.4 4.4 6.6 8.1 7.1 8.3.4.2.8 1 .8 1.7 0 .8.6 1.8 1.3 2.2.7.4 2.9 2.8 4.8 5.3 1.8 2.4 4.2 5.3 5.1 6.4 3.1 3.4 2.7 3.6-24.2 6.6-28.7 3.3-88.5 2-138-3-12.9-1.3-48.5-6.4-60-8.6-4.7-.9-10.6-2-13.1-2.4-15.7-2.8-43.9-11.2-54.4-16.1-7.7-3.6-19.2-13.9-15.6-13.9.6 0 4.2 1.5 8 3.4z"
+        />
+        <path
+          d="M911.5 419.6c-10.2 1.5-14.6 3-15.2 5.1-.9 2.6 15.8 10.5 25 11.8 5.6.7 13.6-1.3 18.7-4.7 4.4-3 4.6-4.1 1.3-7.2-6.5-6-14.3-7.3-29.8-5z"
         />
       </symbol>
 
       <symbol id="close" viewBox="0 0 30 30">
         <path
           d="M15 0c-8.3 0-15 6.7-15 15s6.7 15 15 15 15-6.7 15-15-6.7-15-15-15zm5.7 19.3c.4.4.4 1 0 1.4-.2.2-.4.3-.7.3s-.5-.1-.7-.3l-4.3-4.3-4.3 4.3c-.2.2-.4.3-.7.3s-.5-.1-.7-.3c-.4-.4-.4-1 0-1.4l4.3-4.3-4.3-4.3c-.4-.4-.4-1 0-1.4s1-.4 1.4 0l4.3 4.3 4.3-4.3c.4-.4 1-.4 1.4 0s.4 1 0 1.4l-4.3 4.3 4.3 4.3z"
-        />
-      </symbol>
-
-      <symbol id="arrow-left" viewBox="0 0 29 56">
-        <path
-          d="M28.7.3c.4.4.4 1 0 1.4l-26.3 26.3 26.3 26.3c.4.4.4 1 0 1.4-.4.4-1 .4-1.4 0l-27-27c-.4-.4-.4-1 0-1.4l27-27c.3-.3 1-.4 1.4 0z"
-        />
-      </symbol>
-
-      <symbol id="arrow-right" viewBox="0 0 29 56">
-        <path
-          d="M.3 55.7c-.4-.4-.4-1 0-1.4l26.3-26.3-26.3-26.3c-.4-.4-.4-1 0-1.4.4-.4 1-.4 1.4 0l27 27c.4.4.4 1 0 1.4l-27 27c-.3.3-1 .4-1.4 0z"
-        />
-      </symbol>
-
-      <symbol id="back" viewBox="0 0 20 20">
-        <path
-          d="M2.3 10.7l5 5c.4.4 1 .4 1.4 0s.4-1 0-1.4l-3.3-3.3h11.6c.6 0 1-.4 1-1s-.4-1-1-1h-11.6l3.3-3.3c.4-.4.4-1 0-1.4-.2-.2-.4-.3-.7-.3s-.5.1-.7.3l-5 5c-.2.2-.3.5-.3.7 0 .2.1.5.3.7z"
-        />
-      </symbol>
-
-      <symbol id="menu" viewBox="0 0 18 18">
-        <path
-          d="M16 5h-14c-.6 0-1-.4-1-1 0-.5.4-1 1-1h14c.5 0 1 .4 1 1s-.4 1-1 1zm-14 5h14c.5 0 1-.4 1-1 0-.5-.4-1-1-1h-14c-.6 0-1 .4-1 1s.4 1 1 1zm14 3h-14c-.5 0-1 .4-1 1 0 .5.4 1 1 1h14c.5 0 1-.4 1-1s-.4-1-1-1z"
-        />
-      </symbol>
-
-      <symbol id="share" viewBox="0 0 18 18">
-        <path
-          d="M16 8c-.6 0-1 .4-1 1v6h-12v-6c0-.6-.4-1-1-1s-1 .4-1 1v6c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2v-6c0-.6-.4-1-1-1zm-2.3-2.3c.4-.4.4-1 0-1.4l-4-4c-.4-.4-1-.4-1.4 0l-4 4c-.4.4-.4 1 0 1.4s1 .4 1.4 0l2.3-2.3v7.6c0 .6.4 1 1 1s1-.4 1-1v-7.6l2.3 2.3c.4.4 1 .4 1.4 0z"
-        />
-      </symbol>
-
-      <symbol id="arrow-down" viewBox="0 0 24 24">
-        <path
-          d="M12 18c-.2 0-.5-.1-.7-.3l-11-10c-.4-.4-.4-1-.1-1.4.4-.4 1-.4 1.4-.1l10.4 9.4 10.3-9.4c.4-.4 1-.3 1.4.1.4.4.3 1-.1 1.4l-11 10c-.1.2-.4.3-.6.3z"
-        />
-      </symbol>
-
-      <symbol id="arrow-up" viewBox="0 0 24 24">
-        <path
-          d="M11.9 5.9c.2 0 .5.1.7.3l11 10c.4.4.4 1 .1 1.4-.4.4-1 .4-1.4.1l-10.4-9.4-10.3 9.4c-.4.4-1 .3-1.4-.1-.4-.4-.3-1 .1-1.4l11-10c.1-.2.4-.3.6-.3z"
-        />
-      </symbol>
-
-      <symbol id="arrow-top" viewBox="0 0 18 18">
-        <path
-          d="M15.7 7.3l-6-6c-.4-.4-1-.4-1.4 0l-6 6c-.4.4-.4 1 0 1.4.4.4 1 .4 1.4 0l4.3-4.3v11.6c0 .6.4 1 1 1s1-.4 1-1v-11.6l4.3 4.3c.2.2.4.3.7.3s.5-.1.7-.3c.4-.4.4-1 0-1.4z"
         />
       </symbol>
 
@@ -113,24 +77,6 @@
       <symbol id="chat" viewBox="0 0 18 18">
         <path
           d="M5,17c-0.2,0-0.3,0-0.4-0.1C4.2,16.7,4,16.4,4,16v-2H2c-1.1,0-2-0.9-2-2V3c0-1.1,0.9-2,2-2h14c1.1,0,2,0.9,2,2v9 c0,1.1-0.9,2-2,2H9.3l-3.7,2.8C5.4,16.9,5.2,17,5,17z M2,12h3.5C5.8,12,6,12.2,6,12.5V14l2.4-1.8C8.6,12.1,8.8,12,9,12h7V3H2V12z M13,7H5C4.4,7,4,6.6,4,6s0.4-1,1-1h8c0.6,0,1,0.4,1,1S13.6,7,13,7z M13,10H5c-0.6,0-1-0.4-1-1s0.4-1,1-1h8c0.6,0,1,0.4,1,1 S13.6,10,13,10z"
-        />
-      </symbol>
-
-      <symbol id="mail" viewBox="0 0 18 18">
-        <path
-          d="M16 2h-14c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-10c0-1.1-.9-2-2-2zm0 2v.5l-7 4.3-7-4.4v-.4h14zm-14 10v-7.2l6.5 4c.1.1.3.2.5.2s.4-.1.5-.2l6.5-4v7.2h-14z"
-        />
-      </symbol>
-
-      <symbol id="sound-on" viewBox="0 0 18 18">
-        <path
-          d="M8.5,0.1C8.1-0.1,7.7,0,7.4,0.2L3.7,3H2C0.9,3,0,3.9,0,5v6c0,1.1,0.9,2,2,2h1.7l3.7,2.8C7.6,15.9,7.8,16,8,16 c0.2,0,0.3,0,0.4-0.1C8.8,15.7,9,15.4,9,15V1C9,0.6,8.8,0.3,8.5,0.1z M7,13l-2.4-1.8C4.4,11.1,4.2,11,4,11l-2,0l0-6h2 c0.2,0,0.4-0.1,0.6-0.2L7,3V13z M11.7,9.9l0.7,1.9C13.9,11.2,15,9.7,15,8c0-1.7-1.1-3.2-2.7-3.8l-0.7,1.9C12.5,6.4,13,7.2,13,8C13,8.9,12.5,9.6,11.7,9.9z M12.2,1.1l-0.3,2C14.3,3.5,16,5.6,16,8s-1.8,4.5-4.2,4.9l0.3,2C15.6,14.3,18,11.4,18,8C18,4.6,15.6,1.7,12.2,1.1z"
-        />
-      </symbol>
-
-      <symbol id="sound-off" viewBox="0 0 18 18">
-        <path
-          d="M15.9,8l1.8-1.8c0.4-0.4,0.4-1,0-1.4s-1-0.4-1.4,0l-1.8,1.8l-1.8-1.8c-0.4-0.4-1-0.4-1.4,0s-0.4,1,0,1.4L13.1,8l-1.8,1.8 c-0.4,0.4-0.4,1,0,1.4c0.2,0.2,0.5,0.3,0.7,0.3s0.5-0.1,0.7-0.3l1.8-1.8l1.8,1.8c0.2,0.2,0.5,0.3,0.7,0.3s0.5-0.1,0.7-0.3 c0.4-0.4,0.4-1,0-1.4L15.9,8z M8.5,0.1C8.1-0.1,7.7,0,7.4,0.2L3.7,3H2C0.9,3,0,3.9,0,5v6c0,1.1,0.9,2,2,2h1.7l3.7,2.8C7.6,15.9,7.8,16,8,16 c0.2,0,0.3,0,0.4-0.1C8.8,15.7,9,15.4,9,15V1C9,0.6,8.8,0.3,8.5,0.1z M7,13l-2.4-1.8C4.4,11.1,4.2,11,4,11l-2,0l0-6h2 c0.2,0,0.4-0.1,0.6-0.2L7,3V13z"
         />
       </symbol>
 
@@ -152,32 +98,25 @@
       </div>
     </nav>
 
-    <!-- Panel Top #15 -->
     <nav class="panel top forceMobileView">
       <div class="sections desktop">
         <div class="center">
-          <!-- <a href="#" title="Slides Framework"
-            ><svg style="width: 82px; height: 24px;">
-              <use
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-                xlink:href="#logo"
-              ></use></svg
-          ></a> -->
-          <img
-            style="width: 82px; color: white;"
-            src="assets/svg/logo.svg"
-            alt="Parcel Logo"
-          />
+          <svg style="width: 82px; height: 48px;">
+            <use
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              xlink:href="#logo"
+            ></use>
+          </svg>
         </div>
       </div>
       <div class="sections compact hidden">
         <div class="left">
-          <img
-            style="width: 82px; color: white;"
-            src="assets/svg/logo.svg"
-            id="logo"
-            alt="Parcel Logo"
-          />
+          <svg style="width: 82px; height: 48px;">
+            <use
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              xlink:href="#logo"
+            ></use>
+          </svg>
         </div>
       </div>
     </nav>
@@ -190,21 +129,21 @@
             <div class="fix-7-12">
               <div class="fix-3-12 margin-bottom-3">
                 <div class="logoWords">
-                  <img
-                    src="assets/svg/logo.svg"
-                    style="width: 12px;"
-                    class="wide ae-1 fromCenter"
-                    alt="Parcel Logo"
-                  />
-                  <h1 class="wide ae-1 fromCenter">Parcel</h1>
+                  <svg class="wide ae-1 fromCenter logoSize">
+                    <use
+                      xmlns:xlink="http://www.w3.org/1999/xlink"
+                      xlink:href="#logo"
+                    ></use>
+                  </svg>
+                  <h1 class="wide ae-1 fromCenter logoText">Parcel</h1>
                 </div>
               </div>
+
               <div class="fix-6-12">
                 <p class="large cropBottom ae-2">
                   <span class="opacity-8"
-                    >Manage crypto payrolls in a private manner with
-                    <br />
-                    Sablier, Filecoin & IPFS.</span
+                    >Manage cryptocurrency payrolls in private with <br />
+                    Sablier, Filecoin, & IPFS.</span
                   >
                 </p>
               </div>
@@ -217,7 +156,7 @@
         style="background-image: url(assets/img/background/img-03.jpg);"
       ></div>
     </section>
-    <!-- White Slide 2 (#32) -->
+
     <section class="slide fromLeft whiteSlide">
       <div class="content">
         <div class="container">
@@ -226,15 +165,12 @@
               <ul class="flex reverse">
                 <li class="col-6-12 left cell-32">
                   <h1 class="ae-2 smaller margin-bottom-2">
-                    Moving payrolls into the next digital age.
+                    Moving payrolls forward.
                   </h1>
                   <p class="ae-3 larger light margin-bottom-3">
                     <span class="opacity-8"
-                      >With the advent of cryptocurrency / web 3 technologies,
-                      we have seen the proliferation of various startups,
-                      seeking to provide massive amounts of utility. Parcel
-                      lowers the barriar to entry, providing projects with the
-                      usefulness where it matters most.</span
+                      >Parcel lowers the barriar to entry, providing projects
+                      with the utility where it matters most.</span
                     >
                   </p>
                   <ul class="items-32">
@@ -259,19 +195,19 @@
                         Store Important Files
                       </h4>
                       <p class="opacity-8">
-                        From a W-9 to medical records, Parcel secures your
-                        businesses's most vital and confidential documentation.
+                        Parcel secures your businesses's most vital and
+                        confidential documentation.
                       </p>
                     </li>
                   </ul>
                 </li>
-                <li class="col-6-12 left ae-1 fromRight">
+                <li class="col-6-12 left ae-1">
                   <img
-                    class="ipad-32 margin-bottom-tablet-4"
+                    class="macbook-62 margin-bottom-tablet-3"
+                    src="assets/img/macbook-62.webp"
                     data-action="zoom"
-                    width="1080"
-                    src="assets/img/ipad-32.png"
-                    alt="iPad Image"
+                    width="1005"
+                    alt="Macbook Image"
                   />
                 </li>
               </ul>
@@ -280,7 +216,9 @@
         </div>
       </div>
     </section>
+
     <!-- Slide 3 (#86) -->
+
     <section class="slide fade-6 kenBurns">
       <div class="content">
         <div class="container">
